# rust-web-todo

./: Cargo.toml  README.md
src/: main.rs  tasks.rs
static/css/: style.css
templates/: base.html.tera  index.html.tera
