[package]
name = "todo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.2" }
rocket_dyn_templates = { version="0.1.0-rc.2", features=["tera", "handlebars"] }
serde = { version = "1.0.144", features = ["derive"] }
redis = "0.21.6"
rand = "0.8.5"